- TODO [Minor] Fix edge case if players that try to remove tongs while setting the flip tool mode when they are required
- TODO Store overall transform for flip tool mode to properly reconstruct recipe outline rotation.
    Current method can have bugs and is harder to maintain.
- TODO [Minor] Auto transform for forgeable toolheads?
- TODO [Major] Config rework
	- TODO [Tweak] Config option to disable iron bloom modifications from helve hammers
- TODO [Major] Tool dismantling / tool head removal
- TODO [MAJOR] Rework tool detection system to not use wildcard or cache it / regen it
- TODO [Fix] Fix nugget recipes etc with better system

v1.8.0
- [Fixed] Chiseling dupe (the last hopefully)
- [Fixed] Some missing recipes when smithing with bits (would include only one recipe per output type)
- [Fixed] Smithing ingots with bits would always give copper
- [Fixed] Handbook page for molds would show 20 bits required even with DynamicMoldUnits turned on
- [Tweak] DynamicMoldUnits is off by default now, will probably make all future new features off by default, I guess
- [Fixed] Bug in client tweak for anvil ingredient count: The first time the dialog was opened, the tweak wouldn't get applied.