@@ -7,7 +7,7 @@
     "jayu"
   ],
   "description": "Metal tool repair, smithing tweaks and quality of life improvements.",
-  "version": "1.8.0-rc.3",
+  "version": "1.8.0",
   "dependencies": {
     "game": ""
   }
